--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-PORT = 8080
+PORT = https://13.201.23.247/
 MONGO_URL = mongodb+srv://nethrahabib33:Nethra7@cluster0.6dju4.mongodb.net/financeapp;
 
 
