--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "proxy": "http://13.201.23.247//api/v1",
+    "proxy": "http://localhost:8080/api/v1",
     "name": "client",
     "version": "0.1.0",
     "private": true,
